Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
few kms tests - dmesg-warn/abort - pll enabled crtcs mismatch
<7> [489.575038] i915 0000:00:02.0: [drm:hsw_audio_config_update [i915]] using automatic Maud, Naud
<7> [489.576739] i915 0000:00:02.0: [drm:verify_connector_state [i915]] [CONNECTOR:276:DP-5]
<7> [489.577513] i915 0000:00:02.0: [drm:intel_modeset_verify_crtc [i915]] [CRTC:80:pipe A]
<7> [489.579620] i915 0000:00:02.0: [drm:verify_single_dpll_state.isra.0 [i915]] TC PLL 3
<7> [489.580256] i915 0000:00:02.0: [drm:verify_connector_state [i915]] [CONNECTOR:278:DP-6]
<7> [489.580683] i915 0000:00:02.0: [drm:intel_modeset_verify_crtc [i915]] [CRTC:131:pipe B]
<7> [489.581085] i915 0000:00:02.0: [drm:verify_single_dpll_state.isra.0 [i915]] TBT PLL
<4> [489.581506] ------------[ cut here ]------------
<4> [489.581510] i915 0000:00:02.0: pll enabled crtcs mismatch (found pipe B in enabled mask (0x3))
<4> [489.581548] WARNING: CPU: 5 PID: 1501 at drivers/gpu/drm/i915/display/intel_dpll_mgr.c:4539 intel_shared_dpll_state_verify+0x19e/0x1b0 [i915]
<4> [489.581875] Modules linked in: snd_hda_codec_hdmi snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm i915 mei_pxp mei_hdcp prime_numbers i2c_algo_bit ttm drm_display_helper drm_buddy fuse r8153_ecm cdc_ether usbnet x86_pkg_temp_thermal coretemp kvm_intel kvm irqbypass r8152 crct10dif_pclmul video crc32_pclmul wmi_bmof mii ghash_clmulni_intel e1000e mei_me i2c_i801 ptp mei i2c_smbus pps_core intel_lpss_pci wmi [last unloaded: i915]
<4> [489.581977] CPU: 5 PID: 1501 Comm: kms_pm_dc Not tainted 6.7.0-rc2-drmtip_1450-gaffde6d768bc+ #1
<4> [489.581983] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P LP5 RVP, BIOS RPLPFWI1.R00.4035.A00.2301200723 01/20/2023
<4> [489.581988] RIP: 0010:intel_shared_dpll_state_verify+0x19e/0x1b0 [i915]
<4> [489.582294] Code: 89 54 24 0c 89 0c 24 e8 70 6c 2e e1 8b 0c 24 8b 54 24 0c 48 c7 c7 30 b1 84 a0 48 89 c6 41 89 c8 89 d1 4c 89 e2 e8 f2 fc b1 e0 <0f> 0b e9 cb fe ff ff 66 66 2e 0f 1f 84 00 00 00 00 00 90 90 90 90
<4> [489.582299] RSP: 0018:ffffc90004077a68 EFLAGS: 00010282
<4> [489.582306] RAX: 0000000000000000 RBX: ffff8881054fc000 RCX: 0000000000000000
<4> [489.582310] RDX: 0000000000000002 RSI: 00000000ffffc78a RDI: 00000000ffffffff
<4> [489.582313] RBP: ffff88810afba118 R08: 0000000000000000 R09: ffffc90004077900
<4> [489.582316] R10: 0000000000113c80 R11: 0000000000113cd0 R12: ffff888102640c90
<4> [489.582320] R13: ffff88810afb8000 R14: ffff88810fb22000 R15: ffff88810afb8000
<4> [489.582323] FS: 00007fe1f6e6fc40(0000) GS:ffff8882a7080000(0000) knlGS:0000000000000000
<4> [489.582327] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [489.582330] CR2: 0000563f134c4a68 CR3: 0000000154536000 CR4: 0000000000f50ef0
<4> [489.582334] PKRU: 55555554
<4> [489.582337] Call Trace:
<4> [489.582340] <TASK>
<4> [489.582344] ? __warn+0x7f/0x170
<4> [489.582354] ? intel_shared_dpll_state_verify+0x19e/0x1b0 [i915]
<4> [489.582633] ? report_bug+0x1f8/0x200
<4> [489.582644] ? handle_bug+0x3c/0x70
<4> [489.582653] ? exc_invalid_op+0x18/0x70